# RAA-Backend

./: .env  LICENSE  flake.nix  pyproject.toml
assets/: user.test.json
docker/: compose.yaml
docs/: 安装本地项目.md  脚手架命令.md  项目环境的构建.md
openvault/: __init__.py  config.py  error.py
openvault/cli/: __init__.py  databse_cli.py  server_cli.py
openvault/models/: __init__.py  auth_model.py  group_model.py  user_model.py  vault_model.py
openvault/routers/: __init__.py  group_router.py  user_router.py
openvault/schemas/: __init__.py  group_schema.py  user_schema.py  vault_schema.py
openvault/services/: group_service.py  user_service.py
tests/: conftest.py  test_users.py
tests/routers/: test_user.py
tests/services/: test_user_service.py
