[tool.poetry]
name = "openvault"
version = "0.1.0"
description = ""
authors = ["Dessera <lord.changed@foxmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
typer = "^0.12.5"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.3"


[tool.poetry.scripts]
openvault = "openvault.cli:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
